--- a/Mvector.vcxproj.filters
+++ b/Mvector.vcxproj.filters
@@ -29,4 +29,7 @@
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
 </Project>
